final push to git hub before final submission. fixed up alignment and margins on header for pages 4 and 5

--- a/src/CSS/blog4.css
+++ b/src/CSS/blog4.css
@@ -225,7 +225,18 @@ sprinkling on top */
 .name {
     width: 80%;
     font-size: 3em;
+    padding-top: 40px;
+    margin-bottom: 30px;
 }
+
+header {
+    height: 350px;
+}
+
+.dropdown {
+    margin-bottom: 50px;
+}
+
 main {
     grid-gap: 0;
     height: 90%;
